...
                ),
                Column(
                  children: [
                    const SizedBox(height: 10),
                    Text(
                      widget.isBusiness
                          ? 'Create a Business Account'
                          : 'Create an Account',
                      style: AppTextStyles.displayMedium.copyWith(
                        color: widget.isBusiness ? Colors.white : null,
                      ),
                    ),
                    const SizedBox(height: 10),
...
                const SizedBox(height: 20),

                /// Register Button with Loading State
                Column(
                  children: [
                    AppButton(
                      text: isLoading ? 'Signing Up...' : 'Sign Up',
                      onPressed: isLoading ? () {} : _tryRegisterAndLogin,
                    ),
                    const SizedBox(height: 10),
                  ],
                ),

...
