...
    return Padding(
      padding: const EdgeInsets.all(30),
      child: Column(
        mainAxisSize: MainAxisSize.min,
        children: [
          const Text(
            'Welcome Back',
            style: AppTextStyles.displayMedium,
          ),
          const SizedBox(height: 8),
          const Text(
            'What type of account would you like to sign into?',
            style: AppTextStyles.bodyMedium,
...
